# libuna

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.macosx  README.mingw  README.static  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libuca.pc  libuca.pc.in  libuca.spec  libuca.spec.in  libuna-wiki.ini  libuna.ini  libuna.pc.in  libuna.spec.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
borlandc/: Makefile.am
documents/: Makefile.am  ascii.txt  case_folding.txt  iso-8859-1.txt  iso-8859-10.txt  iso-8859-11.txt  iso-8859-13.txt  iso-8859-14.txt  iso-8859-15.txt  iso-8859-16.txt  iso-8859-2.txt  iso-8859-3.txt  iso-8859-4.txt  iso-8859-5.txt  iso-8859-6.txt  iso-8859-7.txt  iso-8859-8.txt  iso-8859-9.txt  koi8-r.txt  koi8-u.txt  mac-arabic.txt  mac-centraleurroman.txt  mac-cyrillic.txt  mac-dingbats.txt  mac-farsi.txt  mac-gaelic.txt  mac-hebrew.txt  mac-inuit.txt  mac-symbol.txt  mac-thai.txt  mac-turkish.txt  oem-437.txt  oem-720.txt  oem-737.txt  oem-775.txt  oem-850.txt  oem-852.txt  oem-855.txt  oem-857.txt  oem-858.txt  (+18 more)
include/: Makefile.am  libuca.h  libuca.h.in  libuna.h.in
libcdirectory/: Makefile.am  libcdirectory_definitions.h  libcdirectory_directory.c  libcdirectory_directory.h  libcdirectory_directory_entry.c  libcdirectory_directory_entry.h  libcdirectory_extern.h  libcdirectory_libcerror.h  libcdirectory_libcstring.h  libcdirectory_support.c  libcdirectory_support.h  libcdirectory_types.h
libcpath/: Makefile.am  libcpath_definitions.h  libcpath_extern.h  libcpath_libcerror.h  libcpath_libcstring.h  libcpath_path.c  libcpath_path.h  libcpath_split_string.c  libcpath_split_string.h  libcpath_string.c  libcpath_string.h  libcpath_support.c  libcpath_support.h  libcpath_types.h
libsystem.old/: Makefile.am  libsystem.h  libsystem_date_time.c  libsystem_date_time.h  libsystem_directory.h  libsystem_directory_io.h  libsystem_error.c  libsystem_error.h  libsystem_error_string.c  libsystem_error_string.h  libsystem_file.c  libsystem_file.h  libsystem_file_io.h  libsystem_file_stream.h  libsystem_find.h  libsystem_getopt.c  libsystem_getopt.h  libsystem_glob.c  libsystem_glob.h  libsystem_i18n.h  libsystem_libuna.h  libsystem_notify.c  libsystem_notify.h  libsystem_path.c  libsystem_path.h  libsystem_signal.c  libsystem_signal.h  libsystem_split_values.c  libsystem_split_values.h  libsystem_string.c  libsystem_string.h  libsystem_support.c  libsystem_support.h  libsystem_unused.h
libuca/: Makefile.am  libuca.c  libuca_byte_stream.c  libuca_byte_stream.h  libuca_codepage_ascii.h  libuca_codepage_windows_1250.c  libuca_codepage_windows_1250.h  libuca_codepage_windows_1251.c  libuca_codepage_windows_1251.h  libuca_codepage_windows_1252.c  libuca_codepage_windows_1252.h  libuca_codepage_windows_1253.c  libuca_codepage_windows_1253.h  libuca_codepage_windows_1254.c  libuca_codepage_windows_1254.h  libuca_codepage_windows_1255.c  libuca_codepage_windows_1255.h  libuca_codepage_windows_1256.c  libuca_codepage_windows_1256.h  libuca_codepage_windows_1257.c  libuca_codepage_windows_1257.h  libuca_codepage_windows_1258.c  libuca_codepage_windows_1258.h  libuca_definitions.h  libuca_definitions.h.in  libuca_error.c  libuca_error.h  libuca_extern.h  libuca_inline.h  libuca_support.c  libuca_support.h  libuca_unicode_character.c  libuca_unicode_character.h  libuca_utf16_stream.c  libuca_utf16_stream.h  libuca_utf16_string.c  libuca_utf16_string.h  libuca_utf32_stream.c  libuca_utf32_stream.h  libuca_utf32_string.c  (+5 more)
libuna/: Makefile.am  libuna.c  libuna.rc.in  libuna_base16_stream.c  libuna_base16_stream.h  libuna_base32_stream.c  libuna_base32_stream.h  libuna_base64_stream.c  libuna_base64_stream.h  libuna_base64url_stream.c  libuna_base64url_stream.h  libuna_byte_stream.c  libuna_byte_stream.h  libuna_codepage_ascii.h  libuna_codepage_iso_8859_1.h  libuna_codepage_iso_8859_10.c  libuna_codepage_iso_8859_10.h  libuna_codepage_iso_8859_11.h  libuna_codepage_iso_8859_13.c  libuna_codepage_iso_8859_13.h  libuna_codepage_iso_8859_14.c  libuna_codepage_iso_8859_14.h  libuna_codepage_iso_8859_15.c  libuna_codepage_iso_8859_15.h  libuna_codepage_iso_8859_16.c  libuna_codepage_iso_8859_16.h  libuna_codepage_iso_8859_2.c  libuna_codepage_iso_8859_2.h  libuna_codepage_iso_8859_3.c  libuna_codepage_iso_8859_3.h  libuna_codepage_iso_8859_4.c  libuna_codepage_iso_8859_4.h  libuna_codepage_iso_8859_5.c  libuna_codepage_iso_8859_5.h  libuna_codepage_iso_8859_6.c  libuna_codepage_iso_8859_6.h  libuna_codepage_iso_8859_7.c  libuna_codepage_iso_8859_7.h  libuna_codepage_iso_8859_8.c  libuna_codepage_iso_8859_8.h  (+102 more)
macosx/: Introduction.rtf.in  License.rtf  Makefile.am  Readme.rtf  libuna.pmproj
msvscpp/: Makefile.am  libuca.sln  libuna.sln
tests/: Makefile.am  pkgbuild.sh  runtests.sh  test_api_functions.ps1  test_api_functions.sh  test_base16_stream_copy_from.sh  test_base16_stream_copy_to.sh  test_base32_stream_copy_from.sh  test_base32_stream_copy_to.sh  test_base64_stream_copy_from.sh  test_base64_stream_copy_to.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_runner.sh  test_tools.at  test_unaexport.sh  test_unicode_character_copy_from.sh  test_unicode_character_copy_to.sh  test_utf16_stream_copy_from.sh  test_utf16_string_copy_from.sh  test_utf32_stream_copy_from.sh  test_utf32_string_copy_from.sh  test_utf7_stream_copy_from.sh  test_utf8_stream_copy_from.sh  test_utf8_string_copy_from.sh  una_test_base16_stream.c  una_test_base16_stream_copy_from.c  una_test_base16_stream_copy_to.c  una_test_base32_stream.c  una_test_base32_stream_copy_from.c  una_test_base32_stream_copy_to.c  una_test_base64_stream.c  una_test_base64_stream_copy_from.c  una_test_base64_stream_copy_to.c  una_test_byte_stream.c  una_test_codepage_ascii.h  una_test_codepage_iso_8859_1.h  una_test_codepage_iso_8859_10.h  (+108 more)
ucatools/: Makefile.am  character_string.c  character_string.h  error_string.c  error_string.h  process_status.h  string_conversion.c  system_string.h  ucabyte_size_string.c  ucabyte_size_string.h  ucacommon.h  (+14 more)
(+258 files in other folders)
