CODEGEAR_FILES = \
	codegear/libcstring/libcstring.cbproj \
	codegear/libcerror/libcerror.cbproj \
	codegear/libcfile/libcfile.cbproj \
	codegear/libcsystem/libcsystem.cbproj \
	codegear/libuna/libuna.cbproj \
	codegear/unaexport/unaexport.cbproj \
	codegear/libuna.groupproj

EXTRA_DIST = \
	$(CODEGEAR_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

