EXTRA_DIST = \
	ascii.txt \
	iso-8859-1.txt \
	iso-8859-2.txt \
	iso-8859-3.txt \
	iso-8859-4.txt \
	iso-8859-5.txt \
	iso-8859-6.txt \
	iso-8859-7.txt \
	iso-8859-8.txt \
	iso-8859-9.txt \
	iso-8859-10.txt \
	iso-8859-11.txt \
	iso-8859-13.txt \
	iso-8859-14.txt \
	iso-8859-15.txt \
	iso-8859-16.txt \
	koi8-r.txt \
	koi8-u.txt \
	windows-874.txt \
	windows-923.txt \
	windows-1250.txt \
	windows-1251.txt \
	windows-1252.txt \
	windows-1253.txt \
	windows-1254.txt \
	windows-1255.txt \
	windows-1256.txt \
	windows-1257.txt \
	windows-1258.txt

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

