EXTRA_DIST = \
	ascii.txt \
	iso-8859-1.txt \
	iso-8859-2.txt \
	iso-8859-3.txt \
	iso-8859-4.txt \
	iso-8859-5.txt \
	iso-8859-6.txt \
	iso-8859-7.txt \
	iso-8859-8.txt \
	iso-8859-9.txt \
	iso-8859-10.txt \
	iso-8859-11.txt \
	iso-8859-13.txt \
	iso-8859-14.txt \
	iso-8859-15.txt \
	iso-8859-16.txt \
	koi8-r.txt \
	koi8-u.txt \
	mac-arabic.txt \
	mac-celtic.txt \
	mac-centraleurroman.txt \
	mac-croatian.txt \
	mac-cyrillic.txt \
	mac-dingbats.txt \
	mac-farsi.txt \
	mac-gaelic.txt \
	mac-greek.txt \
	mac-icelandic.txt \
	mac-inuit.txt \
	mac-romanian.txt \
	mac-roman.txt \
	mac-romanian.txt \
	mac-russian.txt \
	mac-symbol.txt \
	mac-thai.txt \
	mac-ukrainian.txt \
	oem-437.txt \
	oem-720.txt \
	oem-737.txt \
	oem-775.txt \
	oem-850.txt \
	oem-852.txt \
	oem-855.txt \
	oem-857.txt \
	oem-858.txt \
	oem-862.txt \
	oem-866.txt \
	windows-874.txt \
	windows-932.txt \
	windows-936.txt \
	windows-949.txt \
	windows-950.txt \
	windows-1250.txt \
	windows-1251.txt \
	windows-1252.txt \
	windows-1253.txt \
	windows-1254.txt \
	windows-1255.txt \
	windows-1256.txt \
	windows-1257.txt \
	windows-1258.txt

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

