include_HEADERS = \
	libuna.h

pkginclude_HEADERS = \
	libuna/definitions.h \
	libuna/error.h \
	libuna/extern.h \
	libuna/features.h \
	libuna/types.h

EXTRA_DIST = \
	libuna.h.in \
	libuna/definitions.h.in \
	libuna/features.h.in \
	libuna/types.h.in

DISTCLEANFILES = \
	libuna.h \
	libuna/definitions.h \
	libuna/features.h \
	libuna/types.h \
	Makefile \
	Makefile.in

