EXTRA_DIST = \
	libuna.pmdoc/01bin.xml \
	libuna.pmdoc/01bin.xml.in \
	libuna.pmdoc/01bin-contents.xml \
	libuna.pmdoc/02include.xml \
	libuna.pmdoc/02include.xml.in \
	libuna.pmdoc/02include-contents.xml \
	libuna.pmdoc/03lib.xml \
	libuna.pmdoc/03lib.xml.in \
	libuna.pmdoc/03lib-contents.xml \
	libuna.pmdoc/04share.xml \
	libuna.pmdoc/04share.xml.in \
	libuna.pmdoc/04share-contents.xml \
	libuna.pmdoc/index.xml \
	libuna.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libuna.pmdoc/01bin.xml
	/bin/rm -f libuna.pmdoc/02include.xml
	/bin/rm -f libuna.pmdoc/03lib.xml
	/bin/rm -f libuna.pmdoc/04share.xml
	/bin/rm -f libuna.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

