MSVSCPP_FILES = \
	libcdatetime/libcdatetime.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libuna/libuna.vcproj \
	una_test_base16_stream_copy_from/una_test_base16_stream_copy_from.vcproj \
	una_test_base16_stream_copy_to/una_test_base16_stream_copy_to.vcproj \
	una_test_base32_stream_copy_from/una_test_base32_stream_copy_from.vcproj \
	una_test_base32_stream_copy_to/una_test_base32_stream_copy_to.vcproj \
	una_test_base64_stream_copy_from/una_test_base64_stream_copy_from.vcproj \
	una_test_base64_stream_copy_to/una_test_base64_stream_copy_to.vcproj \
	una_test_get_version/una_test_get_version.vcproj \
	una_test_unicode_character_copy_from/una_test_unicode_character_copy_from.vcproj \
	una_test_unicode_character_copy_to/una_test_unicode_character_copy_to.vcproj \
	una_test_utf16_stream_copy_from/una_test_utf16_stream_copy_from.vcproj \
	una_test_utf16_string_copy_from/una_test_utf16_string_copy_from.vcproj \
	una_test_utf32_stream_copy_from/una_test_utf32_stream_copy_from.vcproj \
	una_test_utf32_string_copy_from/una_test_utf32_string_copy_from.vcproj \
	una_test_utf7_stream_copy_from/una_test_utf7_stream_copy_from.vcproj \
	una_test_utf8_stream_copy_from/una_test_utf8_stream_copy_from.vcproj \
	una_test_utf8_string_copy_from/una_test_utf8_string_copy_from.vcproj \
	unabase/unabase.vcproj \
	unaexport/unaexport.vcproj \
	libuna.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

