MSVSCPP_FILES = \
	libcdatetime/libcdatetime.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libuna/libuna.vcproj \
	una_test_base16_stream/una_test_base16_stream.vcproj \
	una_test_base32_stream/una_test_base32_stream.vcproj \
	una_test_base64_stream/una_test_base64_stream.vcproj \
	una_test_byte_stream/una_test_byte_stream.vcproj \
	una_test_codepage_koi8_r/una_test_codepage_koi8_r.vcproj \
	una_test_codepage_koi8_u/una_test_codepage_koi8_u.vcproj \
	una_test_codepage_mac_centraleurroman/una_test_codepage_mac_centraleurroman.vcproj \
	una_test_codepage_mac_cyrillic/una_test_codepage_mac_cyrillic.vcproj \
	una_test_codepage_mac_roman/una_test_codepage_mac_roman.vcproj \
	una_test_codepage_mac_russian/una_test_codepage_mac_russian.vcproj \
	una_test_codepage_mac_ukrainian/una_test_codepage_mac_ukrainian.vcproj \
	una_test_codepage_windows_1250/una_test_codepage_windows_1250.vcproj \
	una_test_codepage_windows_1251/una_test_codepage_windows_1251.vcproj \
	una_test_codepage_windows_1252/una_test_codepage_windows_1252.vcproj \
	una_test_codepage_windows_1253/una_test_codepage_windows_1253.vcproj \
	una_test_codepage_windows_1254/una_test_codepage_windows_1254.vcproj \
	una_test_codepage_windows_1255/una_test_codepage_windows_1255.vcproj \
	una_test_codepage_windows_1256/una_test_codepage_windows_1256.vcproj \
	una_test_codepage_windows_1257/una_test_codepage_windows_1257.vcproj \
	una_test_codepage_windows_1258/una_test_codepage_windows_1258.vcproj \
	una_test_codepage_windows_874/una_test_codepage_windows_874.vcproj \
	una_test_codepage_windows_932/una_test_codepage_windows_932.vcproj \
	una_test_codepage_windows_936/una_test_codepage_windows_936.vcproj \
	una_test_codepage_windows_949/una_test_codepage_windows_949.vcproj \
	una_test_codepage_windows_950/una_test_codepage_windows_950.vcproj \
	una_test_error/una_test_error.vcproj \
	una_test_support/una_test_support.vcproj \
	una_test_unicode_character/una_test_unicode_character.vcproj \
	una_test_url_stream/una_test_url_stream.vcproj \
	una_test_utf16_stream/una_test_utf16_stream.vcproj \
	una_test_utf16_string/una_test_utf16_string.vcproj \
	una_test_utf32_stream/una_test_utf32_stream.vcproj \
	una_test_utf32_string/una_test_utf32_string.vcproj \
	una_test_utf7_stream/una_test_utf7_stream.vcproj \
	una_test_utf8_stream/una_test_utf8_stream.vcproj \
	una_test_utf8_string/una_test_utf8_string.vcproj \
	unabase/unabase.vcproj \
	unaexport/unaexport.vcproj \
	libuna.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

